2004-01-20  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/mail.c
	* plug-ins/common/mng.c: use more already translated standard file
	error messages. Some cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12104 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-20  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/common/mail.c
+	* plug-ins/common/mng.c: use more already translated standard file
+	error messages. Some cleanup.
+
+2004-01-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-open-menu.c
 	* app/gui/file-save-menu.c
 	* app/gui/image-menu.c
