* gimp.spec.in: Changed library extension to actually use the correct 	        values, and not assume .0.0.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12107 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Ville Pätsi  <drc@gimp.org>
+
+	* gimp.spec.in: Changed library extension to actually use the correct
+	values, and not assume .0.0. 
+
 2004-01-20  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/help.pdb: changed "prog_name" parameter of
