--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-20  Sven Neumann  <sven@gimp.org>
+
+	* tools/gimp-remote.c: always open a new GIMP instance when being
+	called without any filenames/URLs. This makes it behave better when
+	being used from application launchers such as the GNOME panel.
+
+	* docs/gimp-remote-1.3.1.in: document the new behaviour.
+
 2004-01-20  Ville Pätsi  <drc@gimp.org>
 
 	* gimp.spec.in: Changed library extension to actually use the correct
