2004-01-20  Sven Neumann  <sven@gimp.org>
	* tools/gimp-remote.c: when starting a new gimp, pass it the
	display gimp-remote is running on.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12109 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-20  Sven Neumann  <sven@gimp.org>
 
+	* tools/gimp-remote.c: when starting a new gimp, pass it the
+	display gimp-remote is running on.
+
+2004-01-20  Sven Neumann  <sven@gimp.org>
+
 	* tools/gimp-remote.c: always open a new GIMP instance when being
 	called without any filenames/URLs. This makes it behave better when
 	being used from application launchers such as the GNOME panel.
