2004-01-20  Sven Neumann  <sven@gimp.org>
	* libgimp/tmpl/gimphelp.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12110 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-20  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/tmpl/gimphelp.sgml: updated.
+
 2004-01-19  Sven Neumann  <sven@gimp.org>
 
 	* libgimpbase/libgimpbase-sections.txt
