2004-01-20 Henrik Brix Andersen <brix@gimp.org>
* POTFILES.in: added missing
plug-ins/script-fu/scripts/select-to-pattern.scm (fixes bug
#132029)


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12113 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-20  Henrik Brix Andersen  <brix@gimp.org>
+
+	* POTFILES.in: added missing
+	plug-ins/script-fu/scripts/select-to-pattern.scm (fixes bug
+	#132029)
+
 2004-01-20  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
