2004-01-21  Tor Lillqvist  <tml@iki.fi>
	* app/gui/themes.c (themes_list_themes_foreach): Fix undefined
	behaviour. Fixes crash in bringing up the Preferences dialog when
	compiled with Sun's compiler.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12117 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  Tor Lillqvist  <tml@iki.fi>
+
+	* app/gui/themes.c (themes_list_themes_foreach): Fix undefined
+	behaviour. Fixes crash in bringing up the Preferences dialog when
+	compiled with Sun's compiler.
+
 2004-01-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdrawable-transform.c (gimp_drawable_transform_paste): 
