2004-01-21  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpdrawable-transform.c: use RINT() instead of ROUND()
	to calculate the coordinates of the transformed tiles to avoid
	off-by-one errors when affine-transforming, flipping and rotating
	drawables with negative offsets.
	Fixes the off-by-one part of bug #132089.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12118 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpdrawable-transform.c: use RINT() instead of ROUND()
+	to calculate the coordinates of the transformed tiles to avoid
+	off-by-one errors when affine-transforming, flipping and rotating
+	drawables with negative offsets.
+	Fixes the off-by-one part of bug #132089.
+
 2004-01-21  Tor Lillqvist  <tml@iki.fi>
 
 	* app/gui/themes.c (themes_list_themes_foreach): Fix undefined
