--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-21  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/plugindetails.c: correctly resize both panels of the
+	GTK_PANED. This fixes bugs #132032.
+
+	This plug-ins still needs work.
+
 2004-01-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdrawable-transform.c: use RINT() instead of ROUND()
