--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-21  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-01-20  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
