2004-01-21  Michael Natterer  <mitch@gimp.org>
	* app/gui/dialogs-commands.c: show the image menu in newly created
	layers, channels & paths docks.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12123 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/dialogs-commands.c: show the image menu in newly created
+	layers, channels & paths docks.
+
+2004-01-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/tools/gimptool.[ch]: added boolean return value to
 	GimpTool::initialize(). Returning FALSE means the tool could not
 	be initialized and doesn't want to receive button events.
